--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "card-video-generator-api",
   "version": "1.0.0",
   "type": "module",
-  "engines": {
-    "node": "18.x"
-  },
+  "description": "API-based card video generator for Vercel",
   "dependencies": {
     "node-fetch": "^2.6.7",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
